fix style on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -543,4 +543,18 @@ table {
 @media screen and (max-width: 478px) {
   .home, .side {
     width: 100%;
-    padding: 0; } }
+    padding: 0; }
+
+  .post-list li {
+    margin-bottom: 0; }
+  .post-list h3 {
+    margin-bottom: 8px; }
+
+  .post-link {
+    font-size: 16px; }
+
+  #tags {
+    display: flex;
+    flex-wrap: wrap; }
+    #tags li {
+      margin-right: 24px; } }
